# drs_filer/api/additional.data_repository_service.swagger.yaml
@@ -53,6 +53,60 @@ paths:
       tags:
         - DataRepositoryService
       x-swagger-router-controller: ga4gh.drs.server
+  '/objects/{object_id}':
+    delete:
+      summary: Deletes the existing 'DrsObject'.
+      description: >-
+        Deletes the existing DrsObject
+      operationId: DeleteObject
+      responses:
+        '200':
+          description: The `DrsObject` was successfully deleted.
+          schema:
+            type: string
+        '202':
+          description: >
+            The operation is delayed and will continue asynchronously.
+            The client should retry this same request after the delay specified by Retry-After header.
+          headers:
+            Retry-After:
+              description: >
+                Delay in seconds. The client should retry this same request after waiting for this duration.
+                To simplify client response processing, this must be an integral relative time in seconds.
+                This value SHOULD represent the minimum duration the client should wait before attempting
+                the operation again with a reasonable expectation of success. When it is not feasible
+                for the server to determine the actual expected delay, the server may return a
+                brief, fixed value instead.
+              type: integer
+              format: int64
+        '400':
+          description: The request is malformed.
+          schema:
+            $ref: '#/definitions/Error'
+        '401':
+          description: The request is unauthorized.
+          schema:
+            $ref: '#/definitions/Error'
+        '403':
+          description: The requester is not authorized to perform this action.
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: The requested `DrsObject` wasn't found
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: An unexpected error occurred.
+          schema:
+            $ref: '#/definitions/Error'
+      parameters:
+        - name: object_id
+          in: path
+          required: true
+          type: string
+      tags:
+        - DataRepositoryService
+      x-swagger-router-controller: ga4gh.drs.server
 
 definitions:
   DrsPostObject:
